# mliot-embeddedc-2026-hw

week01/: buoi01_tranthanhphuc.c
week02/: answer.txt  buoi02_tranthanhphuc.c
week03/: build_and_flash.bat  buoi03_tranthanhphuc.txt
week04/: answers.txt
week04/Task3/: CMakeLists.txt  build_and_flash.bat  main.c
week04/Task3/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_ll_spi.h
week04/Task3/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_mmc.c
week04/Task4/: CMakeLists.txt  build_and_flash.bat  main.c  stm32f1xx_it.c
week04/Task4/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_ll_spi.c
week04/Task5/: CMakeLists.txt  build_and_flash.bat  main.c  system_stm32f1xx.c
week04/Task5/Drivers/BSP/STM3210E_EVAL/.github/: PULL_REQUEST_TEMPLATE.md
week04/Task5/Drivers/BSP/STM32VL-Discovery/.github/: PULL_REQUEST_TEMPLATE.md
week04/Task5/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_spi.c
